# private_poker

./: .dockerignore  Cargo.toml  Dockerfile  README.md  poker.py
.github/workflows/: ci.yml
assets/: demo.tape  demo_mold.tape  demo_ognf.tape
poker/: Cargo.toml
poker/src/: game.rs  lib.rs  net.rs  poker.rs
poker/src/game/: functional.rs
poker/src/net/: client.rs  messages.rs  server.rs
poker/src/poker/: functional.rs  game.rs
poker/tests/: client_server.rs
poker_client/: Cargo.toml
poker_server/: Cargo.toml
poker_server/src/: main.rs
pp_admin/: claim_user.sh  create_user.sh  delete_user.sh  enable_user.sh  sshd_config
pp_bots/: Cargo.toml  README.md
pp_bots/src/: app.rs  bot.rs  bots.rs  main.rs
pp_bots/src/app/: widgets.rs
pp_client/: Cargo.toml  README.md
pp_client/src/: app.rs  main.rs
pp_client/src/app/: widgets.rs
pp_server/: Cargo.toml  README.md
pp_server/src/: main.rs
private_poker/: Cargo.toml  README.md
private_poker/src/: game.rs  lib.rs
private_poker/src/game/: constants.rs  entities.rs  functional.rs
private_poker/src/net/: client.rs  messages.rs  server.rs  utils.rs
private_poker/tests/: client_server.rs
scripts/: create_user.sh  delete_user.sh
src/: game.rs  lib.rs  main.rs  messages.rs  net.rs  poker.rs
src/net/: client.rs  messages.rs  server.rs  utils.rs
src/poker/: constants.rs  entities.rs  functional.rs  game.rs
