[workspace]
members = [
    "pp_bots",
    "pp_client",
    "pp_server",
    "private_poker",
]
resolver = "2"
exclude = [
    ".github",
    "assets/*",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
