[package]
name = "pp_client"
version = "3.0.0"
edition = "2024"
description = "A poker client and TUI"
repository = "https://github.com/theOGognf/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
mio = { version = "1.0.2", features = ["net", "os-poll"] }
pico-args = "0.5.0"
private_poker = { version = "3.0.0", path = "../private_poker" }
ratatui = "0.28.0"
whoami = "1.5.2"
