[package]
name = "pp_server"
version = "3.0.1"
edition = "2024"
description = "A poker server"
repository = "https://github.com/theOGognf/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
ctrlc = { version = "3.4.5", features = ["termination"] }
env_logger = "0.11.5"
log = "0.4.22"
pico-args = "0.5.0"
private_poker = { version = "3.0.1", path = "../private_poker" }
