[package]
name = "private_poker"
version = "0.1.1"
edition = "2021"
description = "A poker library"
repository = "https://github.com/theOGognf/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
log = "0.4.22"
mio = { version = "1.0.0", features = ["net", "os-poll"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
